# drift

./: .gitignore  README.md  SKILL.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
src/drift/: cli.py  scanner.py
src/drift/checks/: __init__.py  config_size.py  dead_refs.py  orphan_memory.py  stale_env.py  stale_handover.py  stale_tasks.py
tests/: test_checks.py
