[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "drift-ai"
version = "0.1.0"
description = "Detect drift in AI agent configuration files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = []

[project.scripts]
drift = "drift.cli:main"

[project.urls]
Homepage = "https://github.com/uzucky/drift"

[tool.setuptools.packages.find]
where = ["src"]
